--- a/res/xml/wings_button.xml
+++ b/res/xml/wings_button.xml
@@ -29,5 +29,11 @@
          android:summary="@string/power_menu_title_summary"
          android:fragment="com.wings.projection.fragments.PowerMenuSettings" />
 
+    <com.everest.support.preferences.SystemSettingSwitchPreference
+         android:key="lockscreen_enable_power_menu"
+         android:title="@string/lockscreen_enable_power_menu_title"
+         android:summary="@string/lockscreen_enable_power_menu_summary"
+         android:defaultValue="true" />
+
     </PreferenceCategory>
 </PreferenceScreen>
