--- a/res/values/wings_strings.xml
+++ b/res/values/wings_strings.xml
@@ -50,6 +50,7 @@
     <!-- Sub category -->
     <string name="general_category">General</string>
     <string name="statusbar_icons">Icons</string>
+    <string name="power_category">Power Button/Menu"</string>
 
     <!-- Status bar Icon Manager -->
     <string name="icon_manager_title">Icon manager</string>
@@ -76,4 +77,20 @@
     <string name="quick_pulldown_none">Disabled</string>
     <string name="quick_pulldown_right">Pulldown statusbar from right side</string>
     <string name="quick_pulldown_left">Pulldown statusbar from left side</string>
+
+    <!-- Power Menu -->
+    <string name="power_menu_title">Power menu</string>
+    <string name="power_menu_title_summary">View or change power menu entries</string>
+    <string name="global_actions_title">Power menu items</string>
+    <string name="global_actions_screenshot">Screenshot</string>
+    <string name="global_actions_power">Power</string>
+    <string name="global_actions_advanced">Advanced reboot options</string>
+    <string name="global_actions_restart">Restart</string>
+    <string name="global_actions_airplane">Airplane</string>
+    <string name="global_actions_settings">Settings</string>
+    <string name="global_actions_lockdown">Lockdown</string>
+    <string name="global_actions_users">Users</string>
+    <string name="global_actions_logout">Logout</string>
+    <string name="global_actions_emergency">Emergency</string>
+    <string name="global_actions_device_controls">Device controls</string>
 </resources>
