--- a/res/xml/wings_button.xml
+++ b/res/xml/wings_button.xml
@@ -19,4 +19,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/button_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+
+    <PreferenceCategory
+    android:title="@string/power_category">
+
+    <Preference
+         android:key="power_menu"
+         android:title="@string/power_menu_title"
+         android:summary="@string/power_menu_title_summary"
+         android:fragment="com.wings.projection.fragments.PowerMenuSettings" />
+
+    </PreferenceCategory>
 </PreferenceScreen>
