Projection: Add option to launch statusbar tuner [2/2]
[ghostrider-reborn]
- Use Preference instead of PreferenceScreen for android 12

Change-Id: I301ac9416994449b941b5a9e0e9aa79a76f58281
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

--- a/res/values/wings_strings.xml
+++ b/res/values/wings_strings.xml
@@ -49,6 +49,11 @@
     
     <!-- Sub category -->
     <string name="general_category">General</string>
+    <string name="statusbar_icons">Icons</string>
+
+    <!-- Status bar Icon Manager -->
+    <string name="icon_manager_title">Icon manager</string>
+    <string name="icon_manager_summary">Control visibility of status bar icons</string>
 
     <!-- Font style / Icon pack -->
     <string name="theme_customization_font_title">Font style</string>
