--- a/res/xml/wings_quicksettings.xml
+++ b/res/xml/wings_quicksettings.xml
@@ -19,9 +19,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/quicksettings_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
-    
+   
     <PreferenceCategory
     android:title="@string/general_category">
-    
+   
+    <ListPreference
+         android:key="qs_quick_pulldown"
+         android:title="@string/qs_quick_pulldown"
+         android:entries="@array/quick_pulldown_entries"
+         android:entryValues="@array/quick_pulldown_values"
+         android:defaultValue="0" /> 
     </PreferenceCategory>
 </PreferenceScreen>
