--- a/res/xml/wings_theme.xml
+++ b/res/xml/wings_theme.xml
@@ -22,6 +22,26 @@
     
     <PreferenceCategory
     android:title="@string/general_category">
-    
+
+    <!-- Font style -->
+    <Preference
+        android:key="android.theme.customization.fonts"
+        android:title="@string/theme_customization_font_title"
+        android:summary="@string/theme_customization_font_summary"
+        android:fragment="com.wings.projection.fragments.FontsPicker"/>
+
+    <!-- Icon pack -->
+    <Preference
+        android:key="android.theme.customization.icon_pack"
+        android:title="@string/theme_customization_icon_pack_title"
+        android:summary="@string/theme_customization_icon_pack_summary"
+        android:fragment="com.wings.projection.fragments.StatusbarIcons"/>
+
+    <!-- Adaptive icon pack -->
+    <Preference
+        android:key="android.theme.customization.adaptive_icon_shape"
+        android:title="@string/theme_customization_icon_shape_title"
+        android:summary="@string/theme_customization_icon_shape_summary"
+        android:fragment="com.wings.projection.fragments.IconShapes"/>    
     </PreferenceCategory>
 </PreferenceScreen>
