--- a/res/xml/wings_statusbar.xml
+++ b/res/xml/wings_statusbar.xml
@@ -31,4 +31,24 @@
             <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
         </Preference>
     </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/status_bar_clock_title">
+
+        <com.wings.support.preferences.SystemSettingListPreference
+            android:key="status_bar_clock"
+            android:title="@string/status_bar_clock_position_title"
+            android:summary="%s"
+            android:dialogTitle="@string/status_bar_clock_position_title"
+            android:entries="@array/status_bar_clock_position_entries"
+            android:entryValues="@array/status_bar_clock_position_values"
+            android:defaultValue="2" />
+
+        <Preference
+            android:key="clock"
+            android:title="@string/status_bar_clock_title"
+            android:summary="@string/status_bar_clock_summary"
+            android:fragment="com.wings.projection.fragments.Clock" />
+
+    </PreferenceCategory>
 </PreferenceScreen>
