--- a/res/xml/wings_statusbar.xml
+++ b/res/xml/wings_statusbar.xml
@@ -30,6 +30,13 @@
             android:summary="@string/icon_manager_summary">
             <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
         </Preference>
+
+        <Preference
+            android:key="sbbatteryicons"
+            android:title="@string/status_bar_battery_style_title"
+            android:summary="@string/status_bar_battery_style_summary"
+            android:fragment="com.wings.projection.fragments.BatteryStyleSettings" />
+            
     </PreferenceCategory>
 
     <PreferenceCategory
