--- a/res/xml/wings_statusbar.xml
+++ b/res/xml/wings_statusbar.xml
@@ -41,7 +41,13 @@
             android:title="@string/data_disabled_icon_title"
             android:summary="@string/data_disabled_icon_summary"
             android:defaultValue="true"/>
-
+            
+        <com.everest.support.preferences.SystemSettingSwitchPreference
+            android:key="show_fourg_icon"
+            android:title="@string/show_fourg_icon_title"
+            android:summary="@string/show_fourg_icon_summary"
+            android:defaultValue="false"/>
+            
     </PreferenceCategory>
 
     <PreferenceCategory
