--- a/res/xml/wings_statusbar.xml
+++ b/res/xml/wings_statusbar.xml
@@ -31,6 +31,22 @@
             <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
         </Preference>
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/statusbar_network">
+
+        <com.wings.support.preferences.SystemSettingSwitchPreference
+            android:key="data_disabled_icon"
+            android:title="@string/data_disabled_icon_title"
+            android:summary="@string/data_disabled_icon_summary"
+            android:defaultValue="true"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/statusbar_battery">
+
         <Preference
             android:key="sbbatteryicons"
             android:title="@string/status_bar_battery_style_title"
