--- a/res/xml/wings_quicksettings.xml
+++ b/res/xml/wings_quicksettings.xml
@@ -28,21 +28,28 @@
          android:title="@string/qs_quick_pulldown"
          android:entries="@array/quick_pulldown_entries"
          android:entryValues="@array/quick_pulldown_values"
-         android:defaultValue="0" /> 
+         android:defaultValue="0" />
+
+    <com.wings.support.preferences.SystemSettingSwitchPreference
+         android:key="qs_footer_data_usage"
+         android:title="@string/qs_show_data_usage_title"
+         android:summary="@string/qs_show_data_usage_summary"
+         android:defaultValue="true" />
+
     </PreferenceCategory>
 
      <PreferenceCategory
           android:title="@string/qs_show_brightness_slider_title">
 
           <!-- Brightness slider -->
-          <com.everest.support.preferences.SecureSettingListPreference
+          <com.wings.support.preferences.SecureSettingListPreference
                android:key="qs_show_brightness_slider"
                android:title="@string/qs_show_brightness_slider_title"
                android:entries="@array/qs_show_brightness_slider_entries"
                android:entryValues="@array/qs_show_brightness_slider_values"
                android:defaultValue="1" />
 
-          <com.everest.support.preferences.SecureSettingListPreference
+          <com.wings.support.preferences.SecureSettingListPreference
                android:key="qs_brightness_slider_position"
                android:dependency="qs_show_brightness_slider"
                android:title="@string/qs_brightness_slider_position_title"
@@ -50,7 +57,7 @@
                android:entryValues="@array/qs_brightness_slider_position_values"
                android:defaultValue="0" />
 
-          <com.everest.support.preferences.SecureSettingSwitchPreference
+          <com.wings.support.preferences.SecureSettingSwitchPreference
                android:key="qs_show_auto_brightness"
                android:dependency="qs_show_brightness_slider"
                android:title="@string/qs_show_auto_brightness_title"
