--- a/res/xml/projection.xml
+++ b/res/xml/projection.xml
@@ -19,6 +19,10 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/wings_title" >
 
+        <com.android.settingslib.widget.LayoutPreference
+            android:layout="@layout/wings_dashboard_banner"
+            android:key="wings_banner" />
+
         <!-- Theme Room -->
         <Preference
             android:key="theme_category"
